re-factoring: fix pmd issues and minor improvements